--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 discordwebhook==1.0.2
-pandas==1.3.4
-numpy==1.22.0
-scipy==1.7.3
+pandas
+numpy
+scipy
 tabulate
 python-dotenv
 scikit-learn
@@ -9,3 +9,5 @@ xgboost==1.5.2
 lightgbm==3.3.1
 joblib
 numerapi==2.9.4
+pyarrow
+fastparquet
